update file .css after detection pb color Wave

--- a/LOrEnvironnement.css
+++ b/LOrEnvironnement.css
@@ -1,5 +1,8 @@
-body, header, h1, h2, h3, p {
+header, main {
   font-family: "Roboto Condensed", Arial, sans-serif;
  color: green; 
+}
+footer>h3, footer>p{
+color: black;
 }
 h1, h2, h3, p, img {margin: 5px; }
